--- a/view/default/index.html
+++ b/view/default/index.html
@@ -9,7 +9,9 @@
     <ul class="nav nav-drawer">
         <li class="nav-item active"> <a href="/index.html"><i class="mdi mdi-home-outline"></i> 综合数据</a> </li>
         <li class="nav-item"> <a href="/subscribe.html"><i class="mdi mdi-lan-pending"></i> 订阅管理</a> </li>
-        <li class="nav-item"> <a href="/service.html"><i class="mdi mdi-gift"></i> 购买服务</a> </li>
+        <li class="nav-item"> <a href="/service.html"><i class="mdi mdi-wan"></i> 流量套餐</a> </li>
+        <li class="nav-item"> <a href="/record.html"><i class="mdi mdi-file-document"></i> 购买记录</a> </li>
+        <li class="nav-item"> <a href="/download.html"><i class="mdi mdi-arrow-collapse-down"></i> 软件下载</a> </li>
     </ul>
 </nav>
 {/block}
@@ -82,17 +84,31 @@
         <div class="col-lg-6">
             <div class="card">
                 <div class="card-header">
-                    <h4>账号收入记录</h4>
+                    <h4>最新公告</h4>
+                    <!--<ul class="card-actions">
+                        <li>
+                            <button type="button"><i class="mdi mdi-more"></i></button>
+                        </li>
+                    </ul>-->
                 </div>
                 <div class="card-body">
-                    <canvas class="js-chartjs-lines"></canvas>
+                    <div class="list-group">
+                        <a href="#!" class="list-group-item">1、最新的公告在最上方 最多能显示8条公告标题 <small> 4/23 10:25 </small></a>
+                        <a href="#!" class="list-group-item">2、最新的公告在最上方 最多能显示8条公告标题 <small> 4/24 11:26 </small></a>
+                        <a href="#!" class="list-group-item">3、最新的公告在最上方 最多能显示8条公告标题 <small> 4/25 10:25 </small></a>
+                        <a href="#!" class="list-group-item">4、最新的公告在最上方 最多能显示8条公告标题 <small> 4/26 10:25 </small></a>
+                        <a href="#!" class="list-group-item">5、最新的公告在最上方 最多能显示8条公告标题 <small> 4/27 10:25 </small></a>
+                        <a href="#!" class="list-group-item">6、最新的公告在最上方 最多能显示8条公告标题 <small> 4/28 10:25 </small></a>
+                        <a href="#!" class="list-group-item">7、最新的公告在最上方 最多能显示8条公告标题 <small> 4/29 10:25 </small></a>
+                        <a href="#!" class="list-group-item">8、最新的公告在最上方 最多能显示8条公告标题 <small> 4/30 10:25 </small></a>
+                    </div>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <div class="row">
+    <!--<div class="row">
 
         <div class="col-lg-12">
             <div class="card">
@@ -215,60 +231,13 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
 {/block}
 
 {block name="popup"}{/block}
 
 {block name="script"}
-<!--图表插件-->
-
-<script type="text/javascript" src="/static/default/js/index.js"></script>
 <script type="text/javascript" src="/static/libs/js/Chart.js"></script>
-<script type="text/javascript">
-    $(document).ready(function(e) {
-        var $dashChartBarsCnt  = jQuery( '.js-chartjs-bars' )[0].getContext( '2d' ),
-            $dashChartLinesCnt = jQuery( '.js-chartjs-lines' )[0].getContext( '2d' );
-
-        var $dashChartBarsData = {
-            labels: ['周一', '周二', '周三', '周四', '周五', '周六', '周日'],
-            datasets: [
-                {
-                    label: '注册用户',
-                    borderWidth: 1,
-                    borderColor: 'rgba(0,0,0,0)',
-                    backgroundColor: 'rgba(51,202,185,0.5)',
-                    hoverBackgroundColor: "rgba(51,202,185,0.7)",
-                    hoverBorderColor: "rgba(0,0,0,0)",
-                    data: [2500, 1500, 1200, 3200, 4800, 3500, 1500]
-                }
-            ]
-        };
-        var $dashChartLinesData = {
-            labels: ['2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014'],
-            datasets: [
-                {
-                    label: '交易资金',
-                    data: [20, 25, 40, 30, 45, 40, 55, 40, 48, 40, 42, 50],
-                    borderColor: '#358ed7',
-                    backgroundColor: 'rgba(53, 142, 215, 0.175)',
-                    borderWidth: 1,
-                    fill: false,
-                    lineTension: 0.5
-                }
-            ]
-        };
-
-        new Chart($dashChartBarsCnt, {
-            type: 'bar',
-            data: $dashChartBarsData
-        });
-
-        var myLineChart = new Chart($dashChartLinesCnt, {
-            type: 'line',
-            data: $dashChartLinesData,
-        });
-    });
-</script>
+<script type="text/javascript" src="/static/default/js/index.js"></script>
 {/block}
