--- a/view/default/plan.html
+++ b/view/default/plan.html
@@ -8,8 +8,8 @@
 <nav class="sidebar-main">
     <ul class="nav nav-drawer">
         <li class="nav-item"> <a href="/index.html"><i class="mdi mdi-home-outline"></i> 综合数据</a> </li>
-        <li class="nav-item active"> <a href="/subscribe.html"><i class="mdi mdi-lan-pending"></i> 订阅管理</a> </li>
-        <li class="nav-item"> <a href="/service.html"><i class="mdi mdi-wan"></i> 流量套餐</a> </li>
+        <li class="nav-item"> <a href="/subscribe.html"><i class="mdi mdi-lan-pending"></i> 订阅管理</a> </li>
+        <li class="nav-item active"> <a href="/service.html"><i class="mdi mdi-wan"></i> 流量套餐</a> </li>
         <li class="nav-item"> <a href="/record.html"><i class="mdi mdi-file-document"></i> 购买记录</a> </li>
         <li class="nav-item"> <a href="/download.html"><i class="mdi mdi-arrow-collapse-down"></i> 软件下载</a> </li>
     </ul>
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
-                <div class="card-header"><h4><strong>订阅管理</strong></h4></div>
+                <div class="card-header"><h4>确认套餐</h4></div>
                 <div class="card-body">
 
                 </div>
@@ -34,5 +34,5 @@
 {block name="popup"}{/block}
 
 {block name="script"}
-<script type="text/javascript" src="/static/default/js/subscribe.js"></script>
+<script type="text/javascript" src="/static/default/js/plan.js"></script>
 {/block}
