--- a/view/default/register.html
+++ b/view/default/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>注册页面 - UFO视频加速器</title>
+    <title>{:env('app.panel_name')}</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
     <meta name="keywords" content="LightYear,光年,后台模板,后台管理系统,光年HTML模板">
     <meta name="description" content="LightYear是一个基于Bootstrap v3.3.7的后台管理系统的HTML模板。">
@@ -23,16 +23,20 @@
             </div>
             <form id="login_form">
                 <div class="form-group has-feedback feedback-left">
-                    <input type="text" placeholder="请输入账号" class="form-control login_input_color" name="username" id="username" />
+                    <input type="text" placeholder="请输入账号" class="form-control login_input_color" name="username" id="username" maxlength="30"/>
                     <span class="mdi mdi-account form-control-feedback" aria-hidden="true"></span>
                 </div>
                 <div class="form-group has-feedback feedback-left">
-                    <input type="password" placeholder="请输入密码" class="form-control login_input_color" id="password" name="password" />
+                    <input type="password" placeholder="请输入密码" class="form-control login_input_color" id="password" name="password" maxlength="30"/>
                     <span class="mdi mdi-lock form-control-feedback" aria-hidden="true"></span>
                 </div>
                 <div class="form-group has-feedback feedback-left">
-                    <input type="password" placeholder="请确认密码" class="form-control login_input_color" id="re_password" name="re_password" />
+                    <input type="password" placeholder="请确认密码" class="form-control login_input_color" id="re_password" name="re_password" maxlength="30"/>
                     <span class="mdi mdi-lock form-control-feedback" aria-hidden="true"></span>
+                </div>
+                <div class="form-group has-feedback feedback-left">
+                    <input type="password" placeholder="填写邀请码" class="form-control login_input_color" id="invite_code" name="invite_code" maxlength="12"/>
+                    <span class="mdi mdi-account-search form-control-feedback" aria-hidden="true"></span>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-block btn-primary" type="button" id="login" data-loading-text="处理中...">确认注册</button>
@@ -48,6 +52,7 @@
 <script type="text/javascript" src="/static/libs/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/static/libs/js/bootstrap-notify.min.js"></script>
 <script type="text/javascript" src="/static/libs/js/lightyear.js"></script>
+<script type="text/javascript" src="/static/default/js/common.js"></script>
 <script type="text/javascript" src="/static/default/js/register.js"></script>
 </body>
 </html>
