--- a/view/default/service.html
+++ b/view/default/service.html
@@ -9,7 +9,9 @@
     <ul class="nav nav-drawer">
         <li class="nav-item"> <a href="/index.html"><i class="mdi mdi-home-outline"></i> 综合数据</a> </li>
         <li class="nav-item"> <a href="/subscribe.html"><i class="mdi mdi-lan-pending"></i> 订阅管理</a> </li>
-        <li class="nav-item active"> <a href="/service.html"><i class="mdi mdi-gift"></i> 购买服务</a> </li>
+        <li class="nav-item active"> <a href="/service.html"><i class="mdi mdi-wan"></i> 流量套餐</a> </li>
+        <li class="nav-item"> <a href="/record.html"><i class="mdi mdi-file-document"></i> 购买记录</a> </li>
+        <li class="nav-item"> <a href="/download.html"><i class="mdi mdi-arrow-collapse-down"></i> 软件下载</a> </li>
     </ul>
 </nav>
 {/block}
@@ -17,7 +19,14 @@
 {block name="body"}
 <div class="container-fluid">
     <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-header"><h4>流量套餐</h4></div>
+                <div class="card-body">
 
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {/block}
