--- a/view/default/stop.html
+++ b/view/default/stop.html
@@ -37,8 +37,8 @@
 <section class="error-page">
     <div class="error-box">
         <div class="error-body text-center">
-            <h1>404</h1>
-            <h4>很抱歉，你访问的这个地址不存在！</h4>
+            <h1>500</h1>
+            <h4>很抱歉，好像出错了，您可以联系工作人员处理！</h4>
             <a href="/index.html" class="btn btn-primary ">返回首页</a>
         </div>
     </div>
