--- a/view/default/register.html
+++ b/view/default/register.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>{:env('app.panel_name')}</title>
+    <title>{:config('app.panel_title')}</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
-    <meta name="keywords" content="LightYear,光年,后台模板,后台管理系统,光年HTML模板">
-    <meta name="description" content="LightYear是一个基于Bootstrap v3.3.7的后台管理系统的HTML模板。">
-    <meta name="author" content="yinqi">
+    <meta name="keywords" content="{:config('app.panel_keywords')}">
+    <meta name="description" content="{:config('app.panel_description')}">
     <link href="/static/libs/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/libs/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="/static/libs/css/animate.css" rel="stylesheet">
