--- a/view/default/stop.html
+++ b/view/default/stop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>{:env('app.panel_name')}</title>
+    <title>{:config('app.panel_title')}</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
     <link href="/static/libs/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/libs/css/materialdesignicons.min.css" rel="stylesheet">
