--- a/view/default/order.html
+++ b/view/default/order.html
@@ -41,10 +41,10 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div>
+                    <h5 style="padding: 0 2rem;font-weight: bold;">
                         系统检测到您的账号当前含有未到期的套餐服务，如果您确认购买新的套餐服务，那么当前套餐服务将会自动失效。该操作不可逆，请您确认是否继续？
-                    </div>
-                    <div>
+                    </h5>
+                    <div style="padding: 0 2rem;padding-top: 2rem;">
                         <label class="lyear-checkbox checkbox-warning m-t-10">
                             <input type="checkbox" name="agree" id="agree"><span style="color: red;">我已了解该操作的风险，并确认继续购买。</span>
                         </label>
