--- a/view/default/download.html
+++ b/view/default/download.html
@@ -25,130 +25,27 @@
                 <div class="card-body">
                     <ul class="nav nav-tabs nav-justified">
                         <li class="active">
-                            <a data-toggle="tab" href="#home-basic">Windows</a>
+                            <a data-toggle="tab" href="#windows-basic">Windows</a>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="tab" href="#profile-basic">Mac</a>
+                            <a data-toggle="tab" href="#mac-basic">Mac</a>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="tab" href="#messages-basic">Linux</a>
+                            <a data-toggle="tab" href="#linux-basic">Linux</a>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="tab" href="#settings-basic">Android</a>
+                            <a data-toggle="tab" href="#android-basic">Android</a>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="tab" href="#settings-ios">IOS</a>
+                            <a data-toggle="tab" href="#ios-basic">IOS</a>
                         </li>
                     </ul>
                     <div class="tab-content">
-                        <div class="tab-pane fade active in" id="home-basic">
-                            <p>
-                                <div class="row">
-                                    <div class="col-sm-6 col-lg-3">
-                                        <div class="card">
-                                            <div class="card-header bg-success">
-                                                <h4>V2rayN 1.5.5</h4>
-                                            </div>
-                                            <div class="card-body">
-                                                <p>
-                                                    <div>软件介绍</div>
-                                                    <div style="text-align: center;margin-top: 3rem;"><button class="btn btn-label btn btn-warning"><label><i class="mdi mdi-arrow-down-box"></i></label> 立即下载</button></div>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card">
-                        <div class="card-header bg-success">
-                            <h4>Clash 3.6</h4>
-                        </div>
-                        <div class="card-body">
-                            <p>
-                            <div>软件介绍</div>
-                            <div style="text-align: center;margin-top: 3rem;"><button class="btn btn-label btn btn-warning"><label><i class="mdi mdi-arrow-down-box"></i></label> 立即下载</button></div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                                </div>
-                            </p>
-                        </div>
-                        <div class="tab-pane fade" id="profile-basic">
-                            <p>
-                                <div class="row">
-                                    <div class="col-sm-6 col-lg-3">
-                                        <div class="card">
-                                            <div class="card-header bg-success">
-                                                <h4>V2rayN 1.5.5</h4>
-                                            </div>
-                                            <div class="card-body">
-                            <p>
-                            <div>软件介绍</div>
-                            <div style="text-align: center;margin-top: 3rem;"><button class="btn btn-label btn btn-warning"><label><i class="mdi mdi-arrow-down-box"></i></label> 立即下载</button></div>
-                            </p>
-                        </div>
-    </div>
-</div>
-</div>
-                            </p>
-                        </div>
-                        <div class="tab-pane fade" id="messages-basic">
-                            <p>
-                                <div class="row">
-                                    <div class="col-sm-6 col-lg-3">
-                                        <div class="card">
-                                            <div class="card-header bg-success">
-                                                <h4>V2rayN 1.5.5</h4>
-                                            </div>
-                                            <div class="card-body">
-                            <p>
-                            <div>软件介绍</div>
-                            <div style="text-align: center;margin-top: 3rem;"><button class="btn btn-label btn btn-warning"><label><i class="mdi mdi-arrow-down-box"></i></label> 立即下载</button></div>
-                            </p>
-                        </div>
-</div>
-</div>
-</div>
-                            </p>
-                        </div>
-                        <div class="tab-pane fade" id="settings-basic">
-                            <p>
-                                <div class="row">
-                                    <div class="col-sm-6 col-lg-3">
-                                        <div class="card">
-                                            <div class="card-header bg-success">
-                                                <h4>V2rayN 1.5.5</h4>
-                                            </div>
-                                            <div class="card-body">
-                            <p>
-                            <div>软件介绍</div>
-                            <div style="text-align: center;margin-top: 3rem;"><button class="btn btn-label btn btn-warning"><label><i class="mdi mdi-arrow-down-box"></i></label> 立即下载</button></div>
-                            </p>
-                        </div>
-</div>
-</div>
-</div>
-                            </p>
-                        </div>
-                        <div class="tab-pane fade" id="settings-ios">
-                            <p>
-                                <div class="row">
-                                    <div class="col-sm-6 col-lg-3">
-                                        <div class="card">
-                                            <div class="card-header bg-success">
-                                                <h4>V2rayN 1.5.5</h4>
-                                            </div>
-                                            <div class="card-body">
-                            <p>
-                            <div>软件介绍</div>
-                            <div style="text-align: center;margin-top: 3rem;"><button class="btn btn-label btn btn-warning"><label><i class="mdi mdi-arrow-down-box"></i></label> 立即下载</button></div>
-                            </p>
-                        </div>
-</div>
-</div>
-</div>
-                            </p>
-                        </div>
+                        <div class="tab-pane fade active in" id="windows-basic"></div>
+                        <div class="tab-pane fade" id="mac-basic"></div>
+                        <div class="tab-pane fade" id="linux-basic"></div>
+                        <div class="tab-pane fade" id="android-basic"></div>
+                        <div class="tab-pane fade" id="ios-basic"></div>
                     </div>
                 </div>
             </div>
