--- a/view/default/lock.html
+++ b/view/default/lock.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
-                <div class="card-header"><h4>账号绑定</h4></div>
+                <div class="card-header"><h4><strong>账号绑定</strong></h4></div>
                 <div class="card-body">
                     <div class="row">
                         <div class="form-group">
