--- a/view/default/plan.html
+++ b/view/default/plan.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
-                <div class="card-header"><h4>确认套餐</h4></div>
+                <div class="card-header"><h4><strong>确认套餐</strong></h4></div>
                 <div class="card-body">
 
                 </div>
