--- a/view/default/record.html
+++ b/view/default/record.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
-                <div class="card-header"><h4>购买记录</h4></div>
+                <div class="card-header"><h4><strong>购买记录</strong></h4></div>
                 <div class="card-body">
 
                 </div>
