--- a/view/default/recharge.html
+++ b/view/default/recharge.html
@@ -42,8 +42,8 @@
                         <div class="form-group">
                             <label class="col-xs-12">支付方式</label>
                             <div class="example-box" id="pay">
-                                <button class="btn btn-w-md btn-round btn-success">微信支付</button>
-                                <button class="btn btn-w-md btn-round btn-secondary">支付宝支付</button>
+                                <button class="btn btn-w-md btn-round btn-success" pay-type="wx">微信支付</button>
+                                <button class="btn btn-w-md btn-round btn-secondary" pay-type="zfb">支付宝支付</button>
                             </div>
                         </div>
                         <div class="form-group">
