--- a/view/default/layout.html
+++ b/view/default/layout.html
@@ -23,7 +23,7 @@
             <div id="logo" class="sidebar-header">
                 <a href="index.html">
                     <!--                    <img src="/static/images/logo-sidebar.png" title="LightYear" alt="LightYear" />-->
-                    <div style="width:240px;height:68px;line-height:68px;font-size: 20px;font-weight:bold;font-family: 'Microsoft yahei', Roboto, sans-serif">{:env('app.panel_name')}</div>
+                    <div style="width:240px;height:68px;line-height:68px;font-size: 20px;font-weight:bold;font-family: 'Microsoft yahei', Roboto, sans-serif">{:config('app.panel_title')}</div>
                 </a>
             </div>
             <div class="lyear-layout-sidebar-scroll">
