--- a/view/default/login.html
+++ b/view/default/login.html
@@ -18,7 +18,7 @@
     <div class="lyear-login">
         <div class="login-center">
             <div class="login-header text-center">
-                <a href="index.html"> <span style="font-size: 22px;color: white;font-weight: bold;">{:env('app.panel_name')}</span><!--<img alt="light year admin" src="images/logo-sidebar.png">--> </a>
+                <a href="index.html"> <span style="font-size: 22px;color: white;font-weight: bold;">{:config('app.panel_title')}</span><!--<img alt="light year admin" src="images/logo-sidebar.png">--> </a>
             </div>
             <form id="login_form">
                 <div class="form-group has-feedback feedback-left">
