--- a/view/default/subscribe.html
+++ b/view/default/subscribe.html
@@ -36,7 +36,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="gridSystemModalLabel">微信扫码支付</h4>
+                <h4 class="modal-title" id="gridSystemModalLabel">节点二维码</h4>
             </div>
             <div class="modal-body">
                 <div class="row">
