--- a/view/default/recharge.html
+++ b/view/default/recharge.html
@@ -71,6 +71,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary" id="done">我已付款</button>
             </div>
         </div>
     </div>
