--- a/view/default/layout.html
+++ b/view/default/layout.html
@@ -57,7 +57,7 @@
                         <li class="dropdown dropdown-profile">
                             <a href="javascript:void(0)" data-toggle="dropdown">
                                 <!--                                <img class="img-avatar img-avatar-48 m-r-10" src="images/users/avatar.jpg" alt="笔下光年" />-->
-                                <span>{:session('user')->account ?? ''} <span class="caret"></span></span>
+                                <span>{:session('user')->account} <span class="caret"></span></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li> <a href="/lock.html"><i class="mdi mdi-account-key"></i> 账号绑定</a> </li>
